Added basic CSS

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -65,7 +65,7 @@
         <td class="primary">e5e3dc</td>
         <td class="secondary">b2be9d</td>
         <td class="accent1">4c6d4a</td>
-        <td class="accent2">38573d</td>
+        <td class="accent2">#325939</td>
       </tr>
     </table>
 
