added wireframe for page 2

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -129,6 +129,8 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
+    <h4>Rivers</h4>
+    <img src="images/20250610_160213.jpg" alt="Page 2 Wireframe">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
