added more info to the site plan

--- a/haynieprints/site-plan.html
+++ b/haynieprints/site-plan.html
@@ -83,8 +83,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">My Process</a>
+        <a href="#">My Prints</a>
       </nav>
       <hr>
       <h2>
@@ -120,29 +120,55 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        About Me:
+I first started 3d printing when I was a senior in high school and found that it was something I loved. My first printer was a Creality Ender-3, which is a typical intro level 3d printer, but I was able to create some really cool things with it! I learned that you could print anything you could dream of, no matter how big the object is or how small your printer is, so long as you're willing to put in the extra work of binding everything together. As I started printing more and more, I learned that what I really enjoy is making props and costumes, especially lightsabers and helmets from Starwars. I loved the effort I would have to put into them, not just printing them out, but putting the pieces together, applying putty and sanding it down to smooth out the prints, applying filler and sanding it again to make them even smoother, and finally painting it, making patterns using spray paint and take to make something truly memorable! The first helmet I ever printed was for a 501st jet trooper from Battlefront 2. I ended up printing it in 18 different pieces, cause I didn’t know what I was doing yet! It worked out in the end, using the methods mentioned above. I’ve also grown to love printing and making props for others, so if you’re interested in having me make you something, please reach out on my contact page!
+
+Contact Me:
+If you’re interested in having me make you something, please reach out to me at: Info here
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/my_armor.png" alt="image for homepage">
+        <img src="images/jet_trooper.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>My Process</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Here are the different methods I use to make my projects, these are mostly a brief overview rather than an actual guide, for that I recommend researching the topic on youtube, as that’s where I learned all of this
+
+Fitting pieces together:
+Sometimes your eyes are bigger than your printer, which usually results in you needing to find some way to make the many different pieces you printed fit together! I use two different methods for this. The first is glue/epoxy, if you have a piece that may be put under a bit of strain, such as a helmet, I’ll typically use a two part epoxy to hold them together, however this takes a bit of time for the epoxy to set. If the piece is for decoration, I’ll typically use super glue, since it’s much quicker and gets the job done. The second method I use is kinda like plastic welding. I’l super glue the parts together to hold them in place, then I’ll take a soldering iron and mix the plastic of the pieces together, essentially making it one piece. This method takes less time then using epoxy and creates a pretty stable bond, however it does emit some pretty nasty fumes, as well as leaves a welded look on the print, so I typically use it if there’s an area that I can sand down, or that won’t be seen.
+
+Sanding:
+The next issue you’ll typically run into is that you can easily see the layer lines of the print, as well the spots where you glued/welded it together. I usually tackle this issue with two steps, putty and primer. I’ll first use a sandable putty, like bondo or wood filler and put it over the worst areas, like the top of domes and where two pieces came together, let it dry then sand, then repeat and keep repeating until it’s smooth or you’re tired of sanding. Then I’ll wash off the dust and spray it with a sandable filler primer, sand, spray more, sand, until it’s smooth.
+
+Painting:
+This is the funnest part, what I typically do is I use spray paint for my projects, since I can’t seem to get the hang of using an airbrush. I’ll usually do a base coat of whatever the main color I want it to be, then tape it off so I’ll only paint the sections where I want a different color to be. The most difficult part of this is when you want to paint patterns, as it requires a lot of adjusting tape to make it work. You can also try and find a stencil that you can print online to use to make it easier.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/glued.png" alt="image for page">
+        <img src="images/red_helmet.png" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Cal Kestis’s Lightsaber:
+This one is a particular favorite of mine, it was super simple to print and was an absolute blast to paint and weather! The only issue I’ve run into, is that the design is a bit fragile, but since it’s meant for display rather than swinging around, it makes a lot of sense!
+File found at https://www.thingiverse.com/thing:4336828
+
+Pickleball Paddle:
+I printed this more as an experiment than anything, trying to see if I could make a paddle out of PLA+ (which I can use on any printer) instead of ABS (Which I need a heated enclosure for). The paddle definitely works and there’s a lot of potential in printing them, however since I printed it out of PLA+ it’s not very heat resistant, so it has a little bend. I’m planning on trying to make more of these with my own design and testing different filaments, but that will be later down the line.
+File found at https://makerworld.com/en/models/189012-v5-pickleball-paddle#profileId-208385
+
+Clone Armor:
+The project I’m most proud of! I was able to fully 3d print and paint a set of 501st clone officer armor. This took over a year of printing tests to see if it fit, fitting pieces together, applying different fillers and sanding them down, making straps and harnesses so it would stay on and painting, but in the end it was worth it!
+Files bought at https://galacticarmory.net/collections/armor-3d-files/products/phase-2-clone-trooper-armor-3d-print-files
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/paddle.png" alt="image for page3">
+        <img src="images/clone_armor.jpg" alt="image for page3">
 
       </ul>
       <hr>
