--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning/positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan</a>
+  <a href="haynieprints/site-plan.html">Personal Siteplan</a>
 </nav>
 <p>Caleb Haynie - WDD130</p>
 </body>
