--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
@@ -33,7 +33,9 @@
         </div>
         <main class="home-grid">
             <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpg" alt="River in forest">
+                <a href="rivers.html">
+                    <img class="card-img" src="images/rivers.jpg" alt="River in forest">
+                </a>
                 <img class="icon" src="images/river_icon.png" alt="River icon">
                 <h2>Rivers</h2>
             </section>
