added the wire frames

--- a/haynieprints/site-plan.html
+++ b/haynieprints/site-plan.html
@@ -180,21 +180,21 @@ Files bought at https://galacticarmory.net/collections/armor-3d-files/products/p
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        I plan to make a bit of a collage of some of my projects for the big image at the top.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage_wire.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>My process</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        the images on the footer are going to be the social media icons from the white water rafting page.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/process_wire.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>My prints</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/prints_wire.png" alt="page 3 wireframe">
     </main>
   </body>
 
