fixed grammar error

--- a/haynieprints/site-plan.html
+++ b/haynieprints/site-plan.html
@@ -186,7 +186,7 @@ Files bought at https://galacticarmory.net/collections/armor-3d-files/products/p
 
       <h3>My process</h3>
       <p>         
-        the images on the footer are going to be the social media icons from the white water rafting page.
+        The images on the footer are going to be the social media icons from the white water rafting page.
       </p>
       <img src="images/process_wire.png" alt="page 2 wireframe">
 
