--- a/haynieprints/site-plan.html
+++ b/haynieprints/site-plan.html
@@ -95,10 +95,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          My Process <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          My Prints  <!-- change this -->
         </div>
 
         <div class="top">
