--- a/haynieprints/process.html
+++ b/haynieprints/process.html
@@ -36,7 +36,7 @@
 
                 <!--Sanding Card-->
                 <div id="sand-card">
-                    <img>
+                    <img src="images/sand.jpg" alt="A helmet ready to be sanded">
                     <div class="p-card-msg">
                         <h3>Sanding</h3>
                         <p>The next issue you’ll typically run into is that you can easily see the layer lines of the print, as well the spots where you glued/welded it together. I usually tackle this issue with two steps, putty and primer. I’ll first use a sandable putty, like bondo or wood filler and put it over the worst areas, like the top of domes and where two pieces came together, let it dry then sand, then repeat and keep repeating until it’s smooth or you’re tired of sanding. Then I’ll wash off the dust and spray it with a sandable filler primer, sand, spray more, sand, until it’s smooth.</p>
