--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="wwr/index.html">White Water Rafting Website</a>
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning/positioning.html">Positioning Activity</a>
-  <a href="#">Personal Website</a>
+  <a href="haynieprints/index.html">Personal Website</a>
   <a href="haynieprints/site-plan.html">Personal Siteplan</a>
 </nav>
 <p>Caleb Haynie - WDD130</p>
