--- a/haynieprints/process.html
+++ b/haynieprints/process.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haynie Prints | Process</title>
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
 </head>
     <body>
         <header>
@@ -66,9 +67,11 @@
         </main>
         <footer>
             <p>Haynie Prints &copy; 2025 - Caleb Haynie</p>
-            <p><a href="site-plan.html">Site Plan</a></p>
-            <p><a href="process.html">My Process</a></p>
-            <p><a href="projects.html">My Projects</a></p>
+            <div class="links">
+                <a href="site-plan.html">Site Plan</a>
+                <a href="process.html">My Process</a>
+                <a href="projects.html">My Projects</a>
+            </div>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="Fb icon">
