--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a href="positioning/positioning.html">Positioning Activity</a>
   <a href="haynieprints/index.html">Personal Website</a>
   <a href="haynieprints/site-plan.html">Personal Siteplan</a>
+  <a href="webcomponents/slideshow.html">Web Component</a>
 </nav>
 <p>Caleb Haynie - WDD130</p>
 </body>
