added css to the process page

--- a/haynieprints/process.html
+++ b/haynieprints/process.html
@@ -26,6 +26,7 @@
                 <p>Here are the different methods I use to make my projects, these are mostly a brief overview rather than an actual guide, for that I recommend researching the topic on youtube, as that’s where I learned all of this</p>
             </div>
             <div id="process-cards">
+
                 <!--Glueing Card-->
                 <div id="glue-card">
                     <img src="images/glued.png" alt="A helmet that's been glued together">
@@ -37,15 +38,15 @@
 
                 <!--Sanding Card-->
                 <div id="sand-card">
-                    <img src="images/sand.jpg" alt="A helmet ready to be sanded">
                     <div class="p-card-msg">
                         <h3>Sanding</h3>
                         <p>The next issue you’ll typically run into is that you can easily see the layer lines of the print, as well the spots where you glued/welded it together. I usually tackle this issue with two steps, putty and primer. I’ll first use a sandable putty, like bondo or wood filler and put it over the worst areas, like the top of domes and where two pieces came together, let it dry then sand, then repeat and keep repeating until it’s smooth or you’re tired of sanding. Then I’ll wash off the dust and spray it with a sandable filler primer, sand, spray more, sand, until it’s smooth.</p>
                     </div>
+                    <img src="images/sand.jpg" alt="A helmet ready to be sanded">
                 </div>
 
                 <!--Painting card-->
-                <div class="paint-card">
+                <div id="paint-card">
                     <img src="images/painted.png" alt="A painted clone trooper helmet">
                     <div class="p-card-msg">
                         <h3>Painting</h3>
@@ -54,17 +55,22 @@
                 </div>
 
                 <!--Weathering Card-->
-                <div class="weather-card">
-                    <img src="images/unweathered.png" alt="A freshly painted helmet with no weathering">
+                <div id="weather-card">
+                     <img src="images/unweathered.png" alt="A freshly painted helmet with no weathering" class="notweather">
                     <div class="p-card-msg">
                         <h3>Weathering</h3>
                         <p>This step is where I'll make the project I finished look more realistic, since before it looks all shiny and new. The first part of this actually takes place during the painting stage, where I'll put some latex tape over the areas I'm painting so it looks like the paint has started to chip away. After I finish painting I'll peel away the latex tape to show off the effect. I'll then take a mixture of water and black paint and brush it over the object, letting it sit for a few seconds, then wiping it off with a paper towel, leaving just a bit of paint left over. The result is that it looks like a layer of grime has settled into the object, giving it a much more realistic look. Please note that this step is unnecassary if you want the object to look shiny. I personally prefer doing it this way, as the weathering tends to hide any mistakes I made in the earlier steps.</p>
                     </div>
-                    <img src="images/red_helmet.png" alt="A helmet that's been weathered">
+                       
+                        <img src="images/red_helmet.png" alt="A helmet that's been weathered" class="weather">   
                 </div>
             </div>
 
         </main>
+
+
+
+
         <footer>
             <p>Haynie Prints &copy; 2025 - Caleb Haynie</p>
             <div class="links">
