Added css to projects page

--- a/haynieprints/projects.html
+++ b/haynieprints/projects.html
@@ -34,7 +34,7 @@
                     <div class="pro-card-msg">
                         <h3>Cal Kestis’s Lightsaber</h3>
                         <p>This one is a particular favorite of mine, it was super simple to print and was an absolute blast to paint and weather! The only issue I’ve run into, is that the design is a bit fragile, but since it’s meant for display rather than swinging around, it makes a lot of sense!</p>
-                        <p>File found <a href="https://www.thingiverse.com/thing:4336828">Here</a></p>
+                        <a href="https://www.thingiverse.com/thing:4336828">File found here</a>
                     </div>
                 </div>
 
@@ -44,19 +44,19 @@
                     <div class="pro-card-msg">
                         <h3>Pickleball Paddle</h3>
                         <p>I printed this more as an experiment than anything, trying to see if I could make a paddle out of PLA+ (which I can use on any printer) instead of ABS (Which I need a heated enclosure for). The paddle definitely works and there’s a lot of potential in printing them, however since I printed it out of PLA+ it’s not very heat resistant, so it has a little bend. I’m planning on trying to make more of these with my own design and testing different filaments, but that will be later down the line.</p>
-                        <p>File found <a href="https://makerworld.com/en/models/189012-v5-pickleball-paddle#profileId-208385">Here</a></p>
+                        <a href="https://makerworld.com/en/models/189012-v5-pickleball-paddle#profileId-208385">File found here</a>
                     </div>
                 </div>
-
+                <!--Clone armor card-->
                 <div class="clone-card">
                     <img src="images/clone_armor.jpg" alt="Clone trooper armor from Star Wars">
                     <div class="pro-card-msg">
                         <h3>501st Clone Officer Armor</h3>
                         <p>The project I’m most proud of! I was able to fully 3d print and paint a set of 501st clone officer armor. This took over a year of printing tests to see if it fit, fitting pieces together, applying different fillers and sanding them down, making straps and harnesses so it would stay on and painting, but in the end it was worth it!</p>
-                        <p>File purchased from <a href="https://galacticarmory.net/collections/armor-3d-files/products/phase-2-clone-trooper-armor-3d-print-files">Here</a></p>
+                        <a href="https://galacticarmory.net/collections/armor-3d-files/products/phase-2-clone-trooper-armor-3d-print-files">File found here</a>
                     </div>
                 </div>
-
+                <!--Minifigure card-->
                 <div class="mini-card">
                     <img src="images/minifig.png" alt="A lego minifigure display stand">
                     <div class="pro-card-msg">
@@ -65,10 +65,6 @@
                         <p>I haven't published these files online yet, but I plan to in the future.</p>
                     </div>
                 </div>
-
-
-
-
 
             </div>
 
