--- a/haynieprints/site-plan.html
+++ b/haynieprints/site-plan.html
@@ -194,7 +194,7 @@ Files bought at https://galacticarmory.net/collections/armor-3d-files/products/p
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="images/prints_wire.png" alt="page 3 wireframe">
+      <img src="images/projects_siteplan.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
